--- a/index.html
+++ b/index.html
@@ -223,6 +223,52 @@
 <div class="slideshow-container">
 
     <!-- Full-width images with number and caption text -->
+    
+    <div class="mySlides fade">
+      <div class="numbertext"></div>
+      <img src="1.1.jpeg" width="1300" style="height: 350px; margin: 30px;">
+      <div class="text"></div>
+    </div>
+    <div class="mySlides fade">
+      <div class="numbertext"></div>
+      <img src="1.2.jpeg" width="1300" style="height: 350px; margin: 30px;">
+      <div class="text"></div>
+    </div>
+    <div class="mySlides fade">
+      <div class="numbertext"></div>
+      <img src="1.3.jpeg" width="1300" style="height: 350px; margin: 30px;">
+      <div class="text"></div>
+    </div>
+    <div class="mySlides fade">
+      <div class="numbertext"></div>
+      <img src="1.4.jpeg" width="1300" style="height: 350px; margin: 30px;">
+      <div class="text"></div>
+    </div>
+    <div class="mySlides fade">
+      <div class="numbertext"></div>
+      <img src="1.5.jpeg" width="1300" style="height: 350px; margin: 30px;">
+      <div class="text"></div>
+    </div>
+    <div class="mySlides fade">
+      <div class="numbertext"></div>
+      <img src="1.6.jpeg" width="1300" style="height: 350px; margin: 30px;">
+      <div class="text"></div>
+    </div>
+    <div class="mySlides fade">
+      <div class="numbertext"></div>
+      <img src="1.7.jpeg" width="1300" style="height: 350px; margin: 30px;">
+      <div class="text"></div>
+    </div>
+    <div class="mySlides fade">
+      <div class="numbertext"></div>
+      <img src="1.8.jpeg" width="1300" style="height: 350px; margin: 30px;">
+      <div class="text"></div>
+    </div>
+    <div class="mySlides fade">
+      <div class="numbertext"></div>
+      <img src="1.9.jpeg" width="1300" style="height: 350px; margin: 30px;">
+      <div class="text"></div>
+    </div>
     <div class="mySlides fade">
       <div class="numbertext"></div>
       <img src="a.jpeg" width="1300" style="height: 350px; margin: 30px;">
