--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
                     </div>
                     <div class="menu__content">
                         <!-- <img src="assets/img/plate3.png" alt="" class="menu__img"> -->
-                        <h3 class="menu__name">Gangdhrana Stone</h3>
+                        <h3 class="menu__name">Dhrangadhra Stone</h3>
                         <!-- <span class="menu__detail"></span>
                         <span class="menu__preci">$9.50</span>
                         <a href="#" class="button menu__button"><i class='bx bx-cart-alt'></i></a> -->
